force-app/main/default/objects/Candidate__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>shows candidate age</description>
    <inlineHelpText>.....................................</inlineHelpText>
    <label>Age</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>