force-app/main/default/objects/Candidate__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <description>enter education.....</description>
    <inlineHelpText>..........................</inlineHelpText>
    <label>Education</label>
    <length>200</length>
    <type>Text</type>
</CustomField>