force-app/main/default/objects/Candidate__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <description>shows candidate email id</description>
    <inlineHelpText>............................................</inlineHelpText>
    <label>Email Id</label>
    <type>Email</type>
</CustomField>