force-app/main/default/objects/Candidate__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>enter your first name</description>
    <label>First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>